Fix arrow alignment in range picker

--- a/indico/web/client/js/react/components/style/dates.scss
+++ b/indico/web/client/js/react/components/style/dates.scss
@@ -22,6 +22,7 @@
 
 .ui.form input[type='text'].DateInput_input {
     border: none;
+    text-align: center;
 }
 
 .CalendarMonth_caption {
